name:                rasa-ext-websockets
version:             0.0.1
synopsis:            Rasa with web server
description:         Rasa with web server
homepage:            https://github.com/robinvd/rasa-ext-websockets
license:             MIT
license-file:        LICENSE
author:              Robin
maintainer:          Robin
copyright:           2016 Robin
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rasa.Websockets
  build-depends:       base >= 4.7 && < 5
                     , text
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
                     , http-types
                     , safe
                     , rasa
                     , mtl
                     , data-default
                     , lens
  default-language:    Haskell2010

  default-extensions:

  ghc-options:         -Wall
